Bug 1453954 - Stop collapsing the tabs toolbar by default. r=johannh
MozReview-Commit-ID: 2ZSGptrzwSC

UltraBlame original commit: 37c73a2ce762bdc99cc946914193ae55cffe4cfb

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -168,14 +168,6 @@ panelview[mainview] > .panel-header {
   visibility: hidden;
 }
 
-.tab-close-button,
-.tabbrowser-tab::after,
-.tab-background {
-  
-
-  visibility: visible;
-}
-
 .tab-close-button[fadein],
 .tabbrowser-tab[fadein]::after,
 .tab-background[fadein] {
